--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -9,7 +5,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: black;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -31,3 +27,80 @@
     transform: rotate(360deg);
   }
 }
+
+.envelope{
+  width: 500px;
+  height: 300px;
+  border: 3px solid #61dafb;
+  position: fixed;
+  left: 35%;
+  transform: translate(-50%, 0);
+  bottom: 30%;
+  border-radius: 10px;
+  box-shadow: 4px 4px 2px #888888;
+  background-color: white;
+  font-weight: 900;
+}
+.triangle-down{
+  width: 0;
+  height: 0;
+  border-left: 252px solid transparent;
+  border-right: 250px solid transparent;
+  border-top: 160px solid #61dafb;
+  border-radius: 15px;
+  position: absolute;
+  left: -5px;
+  top: -1px;
+}
+.triangle-up{
+  width: 0;
+  height: 0;
+  border-left: 250px solid transparent;
+  border-right: 254px solid transparent;
+  border-bottom: 150px solid #61dafb;
+  border-radius: 15px;
+  position: absolute;
+  bottom: -1px;
+  left: -4px;
+}
+
+@keyframes pound {
+  to { transform: scale(1.4); }
+}
+
+.heart{
+  width: 40px;
+  height: 40px;
+  z-index: 999;
+  position: absolute;
+  left: 225px;
+  top: 130px;
+  cursor: pointer;
+  animation: pound .25s infinite alternate;
+}
+
+.text{
+  top: -100px;
+  left: 100px;
+  color: white;
+  font-size: 24px;
+}
+
+.date{
+  right: 25px;
+  color: blue;
+}
+.date-text{
+  right: 25px;
+  font-size: 24px;
+  color:green;
+}
+
+.content{
+  margin-top: 100px;
+  margin-bottom: 100px;
+  margin-right: 300px;
+  margin-left: 300px;
+  color: black;
+}
+
