--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,19 @@
   color: white;
 }
 
+.background {
+  background-image: url('./bg.jpeg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(6px + 2vmin);
+}
+
 .App-link {
+  text-decoration: underline;
   color: #61dafb;
 }
 
@@ -86,14 +98,27 @@
   font-size: 24px;
 }
 
+/* The animation code */
+@keyframes example {
+  0%   {color:red; left:0px; top:0px;}
+  25%  {color:yellow; left:200px; top:0px;}
+  50%  {color:blue; left:200px; top:200px;}
+  75%  {color:green; left:0px; top:200px;}
+  100% {color:red; left:0px; top:0px;}
+}
+
 .date{
   right: 25px;
-  color: blue;
+  animation-name: example;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
 }
 .date-text{
   right: 25px;
   font-size: 24px;
-  color:green;
+  animation-name: example;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
 }
 
 .content{
@@ -101,6 +126,5 @@
   margin-bottom: 100px;
   margin-right: 300px;
   margin-left: 300px;
-  color: black;
+  color: red;
 }
-
